--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Gamer Completa</title>
+    <title>Página Gamer casi terminada</title>
     <link rel="stylesheet" href="tarea n°7.css">
 </head>
 <body>
@@ -19,12 +19,12 @@
     <main>
         <div id="inicio" class="section animar">
             <h2>la nuestra página web</h2>
-            <p>Descubre los mejores servicios gamer.</p>
+            <p>Descubre los mejores del mnudo gamer.</p>
         </div>
 
         <div id="servicios" class="section animar">
-            <h2>Nuestros Servicios</h2>
-            <p>Ofrecemos una amplia gama de servicios para gamers, desde asesoramiento hasta personalización de equipos.</p>
+            <h2>Servidores</h2>
+            <p>Ofrecemos una amplia gama de servicios de juegos para que puedas jugar tranquilamente durante tus secciones de juegos.</p>
         </div>
 
         <div id="sobre-nosotros" class="section animar">
@@ -41,8 +41,8 @@
     <footer class="neon-footer">
         <h2>Contáctanos</h2>
         <div class="contact-info">
-            <p>Email: <a href="mailto:example@gmail.com">example@gmail.com</a></p>
-            <p>Teléfono: +34 123 456 789</p>
+            <p>Email: <a href="mailto:example@gmail.com">moscudemian@gmail.com</a></p>
+            <p>Teléfono: +54 3364 24334</p>
         </div>
     </footer>
 </body>
